<?xml version="1.0"?>
<package>
  <name>grid_world_conversion</name>
  <version>0.0.0</version>
  <description>Functionality for converting map coordinates to grid coordinates and vice versa.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="fleckenf@todo.todo">fleckenf</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>cmake</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>Eigen</build_depend>

  <run_depend>angles</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>Eigen</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
